# courseraNotesPlugin

./: .gitignore  Makefile  Readme.md  manifest.json  pyproject.toml
plugin/: index.html
serverApp/: db_controller.py  main.py  system_prompt.md  system_prompt.txt
uiApp/: index.html  package-lock.json  package.json  vite.config.js
uiApp/src/: agent.js  api.js  collect.js  copyToClipboard.js  createState.js  main.js  panel.js  toast.js
