[tool.poetry]
name = "lectionsplugin"
version = "0.1.0"
description = ""
authors = ["Margarita Andrianova"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
openai = "^1.55.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
